Add SPIFFS Images support for beer color

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
-lib_deps = moononournation/GFX Library for Arduino@^1.1.6
+lib_deps = 
+	moononournation/GFX Library for Arduino@^1.1.6
+	bitbank2/PNGdec@^1.0.1
