--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,12 @@
 
 [env:az-delivery-devkit-v4]
 platform = espressif32
-board = az-delivery-devkit-v4
+board = esp32dev
 framework = arduino
 lib_deps = 
 	moononournation/GFX Library for Arduino@^1.1.6
 	bitbank2/PNGdec@^1.0.1
+	ayushsharma82/AsyncElegantOTA @ ^2.2.6
+	me-no-dev/AsyncTCP @ ^1.1.1
+	me-no-dev/ESP Async WebServer@^1.2.3
+	khoih-prog/ESPAsync_WiFiManager @ ^1.9.4
