Add weight function and display

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	me-no-dev/AsyncTCP @ ^1.1.1
 	me-no-dev/ESP Async WebServer@^1.2.3
 	khoih-prog/ESPAsync_WiFiManager @ ^1.9.4
+	olkal/HX711_ADC@^1.2.12
