Code corrections for first tests

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,14 @@
 [env:az-delivery-devkit-v4]
 platform = espressif32
 board = esp32dev
+upload_protocol = espota
+upload_port = 192.168.1.200
 framework = arduino
 lib_deps = 
-	moononournation/GFX Library for Arduino@^1.1.6
 	bitbank2/PNGdec@^1.0.1
 	ayushsharma82/AsyncElegantOTA @ ^2.2.6
 	me-no-dev/AsyncTCP @ ^1.1.1
 	me-no-dev/ESP Async WebServer@^1.2.3
 	khoih-prog/ESPAsync_WiFiManager @ ^1.9.4
 	robtillaart/HX711@^0.3.2
+	moononournation/GFX Library for Arduino@^1.2.3
