Add serial monitoring speed

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = esp32dev
 upload_protocol = espota
 upload_port = 192.168.1.200
 framework = arduino
+monitor_speed=115200
 lib_deps = 
 	bitbank2/PNGdec@^1.0.1
 	ayushsharma82/AsyncElegantOTA @ ^2.2.6
