Preparing for new web server

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ board = esp32dev
 upload_protocol = espota
 upload_port = 192.168.1.200
 framework = arduino
-monitor_speed=115200
+monitor_speed = 115200
 lib_deps = 
 	bitbank2/PNGdec@^1.0.1
 	ayushsharma82/AsyncElegantOTA @ ^2.2.6
@@ -23,3 +23,4 @@ lib_deps =
 	khoih-prog/ESPAsync_WiFiManager @ ^1.9.4
 	robtillaart/HX711@^0.3.2
 	moononournation/GFX Library for Arduino@^1.2.3
+	bblanchon/ArduinoJson@^6.19.4
